# ALpDvFEB

./: .gitignore  README.md
deal_general/: CMakeLists.txt  README.md  dealii.pbs  dealii_general.cpp  hp-general.cpp
deal_general/include/: data.hpp  equation_data.hpp  evaluation.hpp  problem_h.hpp  problem_hp.hpp
deal_general/source/: dealii_general.cpp  evaluation.cpp  evaluation.hpp  poisson_h.cpp  poisson_h.hpp  poisson_hp.cpp  poisson_hp.hpp  problem.cpp  problem.hpp  problem_h.cpp  problem_hp.cpp
deal_main/: CMakeLists.txt  README.md  dealii.pbs
deal_main/source/: Timer.hpp  deal_main.cpp  evaluation.hpp  poisson_h.hpp  poisson_hp.hpp
mfem_general/: CMakeLists.txt  Makefile  README.md  mfem.pbs  mfem_general.cpp  unit_cube.mesh
mfem_general/include/: Timer.hpp  data.hpp  evaluation.hpp  problem.hpp
mfem_general/source/: evaluation.cpp  evaluation.hpp  mfem_general.cpp  multigrid.hpp  poisson.cpp  poisson.hpp  problem.cpp  problem.hpp
mfem_main/: CMakeLists.txt  README.md  mfem.pbs
mfem_main/data/: unit_cube.mesh
mfem_main/source/: evaluation.hpp  mfem_main.cpp  multigrid.hpp  poisson.cpp  poisson.hpp
ngsolve_general/: README.md  Timer.py  adaptive.py  mpi_poisson.py  mpi_test.py  ngsolve-general.py
ngsolve_main/: README.md  Timer.py  ngsolve-general.py  ngsolve_main.py
